--- a/MvcCubosAWSDDB/Views/Home/Index.cshtml
+++ b/MvcCubosAWSDDB/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new {  id=item.IdCubo  }) |
                 @Html.ActionLink("Details", "Details", new {  id=item.IdCubo }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.IdCubo })
+              <a asp-controller="Home" asp-action="Delete" asp-route-id="@item.IdCubo">Eliminar</a>
             </td>
         </tr>
 }
